fixed bug with parent div overlapping child.

--- a/src/routes/win7-os.css
+++ b/src/routes/win7-os.css
@@ -672,7 +672,7 @@
     width: var(--aero-program-width);
 
     /* Default PROGRAM height */
-    height: var(--aero-program-height);
+    height: fit-content;
 }
 
 /* =====================================
